Update ElevationDownloader.java